@@ -69,8 +69,7 @@ X3DBrowserWidget::X3DBrowserWidget (int argc, char** argv) :
 	                    scene (getBrowser () -> getExecutionContext ()),
 	         executionContext (scene)
 {
-	scene            .addParent (getBrowser ());
-	executionContext .addParent (getBrowser ());
+	addChildren (scene, executionContext);
 
 	parseOptions (argc, argv);
 }
